# sumii-mobile-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  .trivyignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
alembic/: env.py
alembic/versions/: 20668ac8d9fb_add_user_mobile_fields_language_push_.py  32a82badeb9b_initial_schema_with_users_conversations_.py  403149b5cfc9_add_documents_table.py  452ec56963cf_add_user_location_fields_for_lawyer_search.py  69548f077344_add_reference_number_and_markdown_s3_.py  702377249055_add_notifications_and_lawyer_.py  8a9b7c6d5e4f_add_mistral_conversation_id.py  8d009a31dd83_add_wrapup_fields_to_conversations.py  9a8b7c6d5e4f_change_case_id_to_string.py  a1b2c3d4e5f6_add_user_profile_fields.py  a496b2854b78_extend_pdf_url_to_2000_chars.py  add_fastapi_users_fields.py  add_oauth_accounts_table.py  ce2cb89c92e1_rename_username_to_nickname.py  e2a2d2bae412_add_document_ids_to_messages.py  fa780bfb9a37_add_conversation_metadata_for_dynamic_.py  fe8fca59e259_add_username_field.py
app/: __init__.py  config.py  database.py  main.py  users.py
app/models/: __init__.py  conversation.py  document.py  lawyer_connection.py  message.py  notification.py  oauth_account.py  summary.py  user.py
app/schemas/: __init__.py  conversation.py  document.py  lawyer_connection.py  notification.py  push.py  sse.py  summary.py  sync.py  user.py  webhook.py  websocket.py
app/services/: README.md  anwalt_service.py  document_library.py  email_service.py  ocr_service.py  orchestrator.py  pdf_service.py  push_service.py  s3_service.py  storage_service.py  summary_service.py
app/templates/: legal_case_report.html
app/utils/: logging_config.py  reference_number.py  security.py
db/: init-test-db.sql
docs/: typescript-types.ts
infrastructure/: README.md  acm.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  ses.tf  sns_sqs.tf  variables.tf
scripts/: build-and-push.sh  generate-typescript-types.sh  pydantic_to_typescript.py  run-migrations.py  run-migrations.sh
tests/: README.md  __init__.py  conftest.py  fixtures.py
tests/docs/: status_dec20.md  test_organization.md  test_summary.md
tests/e2e/: __init__.py  (+3 more)
(+45 files in other folders)
